--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -86,6 +86,9 @@
     padding: 1.5rem;
     z-index: 1;
 }
+.contact_form-input:focus{
+    background: none;
+}
 
 .contact_form-tag{
     position: absolute;
@@ -109,30 +112,38 @@
 
 /* large Device */
 @media screen and (max-width: 992px) {
-    .container{
-      margin-left: var(--mb-1-5);
-      margin-right: var(--mb-1-5);
-    }
-  
-    .button{
-      padding: 1rem 1.75rem;
-    }
-  
-    .button_icon{
-      width: 22px;
-      height: 22px;
-    }
+   
   }
   
   /* medium Device */
   @media screen and (max-width: 768px) {
-  
+    .contact_container{
+        grid-template-columns: 1fr;
+        row-gap: 3rem;
+    }
+
+    .contact_info{
+        justify-content: center;
+    }
+
+    .contact_form{
+        margin: 0 auto;
+    }
+    .contact_content{
+        text-align: center;
+    }
   }
   
   @media screen and (max-width: 576px) {
-    
+    .contact_info{
+        grid-template-columns: 1fr;
+    }
+    .contact_form{
+        width: 100%;
+    }
+
   }
-  
+
   /* small Device */
   @media screen and (max-width: 350px) {
  
