--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -48,7 +48,14 @@
     color: var(--title-color-dark);
 }
 
+
+/* Change backgroundHeader */
+
 /*========== breakpoints ==========*/
+
+.scroll-header{
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+}
 
 /* medium Device */
 @media screen and (max-width: 768px) {
