--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,7 @@ body,
 button,
 input,
 textarea{
+  -webkit-tap-highlight-color: transparent;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
 }
