--- a/src/index.css
+++ b/src/index.css
@@ -49,8 +49,8 @@
 
 [data-theme="dark"]{  
     /* color */
-    --title-color:  #ffffff;
-    --title-color-dark:  #ffffff;
+    --title-color:  #EAD9BD;
+    --title-color-dark:  #B39B84;
     --text-color: #ffffff;
     --body-color: #1a1c22;
     --container-color: #2e3239;
