--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@
     /* color */
     --title-color:  #EAD9BD;
     --title-color-dark:  #B39B84;
-    --text-color: #ffffff;
+    --text-color: #d3d0cb;
     --body-color: #1a1c22;
     --container-color: #2e3239;
 }
