--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -78,7 +78,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    border: 2px solid rgba(0, 0, 0, 0.1);
+    border: 2px solid var(--btn-bg);
     background: none;
     color: var(--text-color);
     outline: none;
