--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,4 +1,6 @@
 .card-wrapper {
+  display: flex;
+  flex-direction: column;
   grid-template-columns: repeat(3, 270px);
   justify-content: center;
   column-gap: 1.8rem;
